platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_119.platter
start() {
  sip of r = sqrt(9),  p = pow(2, 8);
  sip of n = rand();
}
